kubernetes/photoprism/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app: photoprism
    app.kubernetes.io/instance: photoprism
spec:
  host: photoprism.apps.okd.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: photoprism
    weight: 100
  port:
    targetPort: 2342
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
